objects/FTS_Attachments__c.object
<CustomObject>
    <fields>
        <fullName>Attachments_Filename__c</fullName>
        <label>Attachments Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachments_Filesize__c</fullName>
        <label>Attachments Filesize</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cc_Incoming__c</fullName>
        <label>Cc Incoming</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Commentary_Log__c</fullName>
        <label>Customer Commentary Log</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Email_Address__c</fullName>
        <label>Customer Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_FirstName__c</fullName>
        <label>Customer FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_LastName__c</fullName>
        <label>Customer LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Severity_1__c</fullName>
        <label>Customer Severity 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DK_Version__c</fullName>
        <label>DK Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Difficulty__c</fullName>
        <label>Difficulty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCR_State_2__c</fullName>
        <label>FCR State 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCR_State_3__c</fullName>
        <label>FCR State 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCR_State__c</fullName>
        <label>FCR State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRs_2__c</fullName>
        <label>FCRs 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRs_3__c</fullName>
        <label>FCRs 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRs__c</fullName>
        <label>FCRs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>FTS External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FTS_Owner__c</fullName>
        <label>FTS Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headline__c</fullName>
        <label>Headline</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Category__c</fullName>
        <label>Issue Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Company_Name__c</fullName>
        <label>Issue Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Company_Tier__c</fullName>
        <label>Issue Company Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Log__c</fullName>
        <label>Notes Log</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Date__c</fullName>
        <label>Submit Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Incoming__c</fullName>
        <label>To Incoming</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>FTS Legacy Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FTS_External_ID__c</columns>
        <columns>Technology__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FTS_Issues_Since</fullName>
        <columns>FTS_External_ID__c</columns>
        <columns>Issue_Company_Name__c</columns>
        <columns>Submit_Date__c</columns>
        <columns>FTS_Owner__c</columns>
        <columns>Headline__c</columns>
        <columns>NAME</columns>
        <columns>Attachments_Filename__c</columns>
        <columns>Attachments_Filesize__c</columns>
        <columns>FCRs__c</columns>
        <columns>FCRs_2__c</columns>
        <columns>FCRs_3__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submit_Date__c</field>
            <operation>greaterThan</operation>
            <value>April 1,2014 00:00:00 AM EST</value>
        </filters>
        <label>FTS Issues Since...</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FTS_Legacy_Issues</fullName>
        <columns>FTS_External_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Technology__c</columns>
        <columns>Headline__c</columns>
        <columns>Issue_Company_Name__c</columns>
        <columns>NAME</columns>
        <columns>Attachments_Filesize__c</columns>
        <columns>Attachments_Filename__c</columns>
        <filterScope>Everything</filterScope>
        <label>FTS Legacy Issues</label>
        <language>en_US</language>
        <sharedTo>
            <group>L2_Design_and_Technology_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2016_FTS_Issues</fullName>
        <columns>FTS_External_ID__c</columns>
        <columns>NAME</columns>
        <columns>Headline__c</columns>
        <columns>Technology__c</columns>
        <columns>FTS_Owner__c</columns>
        <columns>Submit_Date__c</columns>
        <columns>Issue_Company_Name__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2016 12:00 AM</value>
        </filters>
        <label>2016 FTS Issues</label>
        <language>en_US</language>
        <sharedTo>
            <group>L2_Design_and_Technology_Support</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FTS-{0000000000}</displayFormat>
        <label>FTS Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FTS Legacy Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>